--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,16 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
-
+@font-face {
+  font-family: 'BengaliFont'; /* Name of the font family */
+  src: url('./fonts/Li\ Alinur\ Shishir\ Unicode.ttf');
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: 'Bashundhara';
+  src: url('./fonts/Li\ Alinur\ Bashundhara\ Unicode.ttf');
+}
 @layer utilities {
   .text-balance {
     text-wrap: balance;
