--- a/app/globals.css
+++ b/app/globals.css
@@ -26,7 +26,10 @@ background-clip: text;
 -webkit-text-fill-color: transparent;
 font-family: 'midiumbengali';
 }
-
+.custombtn{
+  font-weight: bold;
+  
+}
 
 @font-face {
   font-family: 'BengaliFont'; /* Name of the font family */
